// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import { analysis, project as proj } from '../utils/messages' 1`] = `
Array [
  undefined,
  Array [
    Array [
      "analysis",
      "analysis",
    ],
    Array [
      "project",
      "proj",
    ],
  ],
]
`;

exports[`import { analysis, project as proj }, messages from '../utils/messages' 1`] = `
Array [
  "messages",
  Array [
    Array [
      "analysis",
      "analysis",
    ],
    Array [
      "project",
      "proj",
    ],
  ],
]
`;

exports[`import {analysis, project as proj} from '../utils/messages' 1`] = `
Array [
  undefined,
  Array [
    Array [
      "analysis",
      "analysis",
    ],
    Array [
      "project",
      "proj",
    ],
  ],
]
`;

exports[`import messages, { analysis, project as proj } from '../utils/messages' 1`] = `
Array [
  "messages",
  Array [
    Array [
      "analysis",
      "analysis",
    ],
    Array [
      "project",
      "proj",
    ],
  ],
]
`;

exports[`import msgs from '../utils/messages' 1`] = `
Array [
  "msgs",
  Array [],
]
`;

exports[`lint-messages should lint file 1`] = `
Array [
  Array [
    "common.downloadRegional",
    6,
  ],
  Array [
    "analysis.stop",
    8,
  ],
  Array [
    "analysis.stop",
    9,
  ],
  Array [
    "project.delete",
    12,
  ],
  Array [
    "project.delete",
    13,
  ],
  Array [
    "common.runRegional",
    14,
  ],
  Array [
    "common.stopRegional",
    14,
  ],
]
`;
